@@ -20,6 +20,7 @@ Revision history for DBIx::Class
           via custom accessors
         - Fixed ::Schema::Versioned to work properly with quoting on
           (RT#59619)
+        - Fixed t/54taint fails under local-lib
 
     * Misc
         - Refactored capability handling in Storage::DBI, allows for
